--- a/index.html
+++ b/index.html
@@ -2,108 +2,82 @@
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8">
-<title>Calendário de Reservas • Mercatto Delícia</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+<title>Calendário de Reservas • Delícia Gourmet</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Inter:wght@400;600&display=swap" rel="stylesheet">
 
 <style>
-:root {
+:root{
   --bg:#0b0f19;
   --card:#151b28;
-  --line:#1e2533;
+  --gold:#d4af37;
+  --accent:#b8860b;
   --text:#f8fafc;
-  --muted:#94a3b8;
-  --gold:#b8860b;
-  --gold-light:#d4af37;
-  --green:#22c55e;
+  --muted:#a5b1c2;
   --red:#ef4444;
+  --green:#22c55e;
   --radius:18px;
 }
-
-*{box-sizing:border-box;margin:0;padding:0;}
+*{margin:0;padding:0;box-sizing:border-box;}
 html,body{
-  width:100%;
   height:100%;
   background:var(--bg);
-  color:var(--text);
   font-family:'Inter',sans-serif;
-  overflow:hidden;
+  color:var(--text);
   display:flex;
   flex-direction:column;
+  overflow:hidden;
 }
 
 /* HEADER */
 header{
   text-align:center;
-  padding:20px 0 15px;
-  background:linear-gradient(180deg,rgba(184,134,11,0.15),transparent);
-  box-shadow:0 3px 10px rgba(0,0,0,.4);
-  flex-shrink:0;
-  position:sticky;
-  top:0;
-  z-index:5;
-}
-header img{
-  width:110px;
-  border-radius:50%;
-  box-shadow:0 0 25px rgba(184,134,11,.4);
+  padding:25px 10px 15px;
+  background:linear-gradient(180deg,rgba(212,175,55,0.1),transparent);
+  box-shadow:0 4px 20px rgba(0,0,0,.4);
 }
 header h1{
-  margin-top:10px;
-  font-size:1.8rem;
-  color:var(--gold-light);
-  font-weight:700;
-  letter-spacing:.5px;
-  text-shadow:0 0 10px rgba(212,175,55,.4);
+  font-family:'Playfair Display',serif;
+  font-size:1.9rem;
+  color:var(--gold);
+  text-shadow:0 0 15px rgba(212,175,55,.4);
+}
+header p{
+  font-size:1rem;
+  color:var(--muted);
 }
 
-/* CALENDÁRIO */
+/* CALENDAR */
 .calendar{
   flex:1;
   display:flex;
   flex-direction:column;
-  justify-content:flex-start;
-  width:100%;
-  height:100%;
-  background:var(--card);
-  border-radius:0;
-  padding:25px 30px 40px;
-  box-shadow:0 0 50px rgba(0,0,0,.6);
-  border-top:1px solid var(--line);
+  padding:20px 40px;
   overflow-y:auto;
   animation:fadeIn 1s ease;
 }
-
 .calendar-header{
   display:flex;
   justify-content:space-between;
   align-items:center;
-  border-bottom:1px solid var(--line);
-  padding-bottom:14px;
   margin-bottom:25px;
+}
+.calendar-header h2{
+  font-family:'Playfair Display',serif;
+  color:var(--gold);
+  font-size:1.8rem;
 }
 .calendar-header button{
   background:none;
   border:none;
-  color:var(--gold-light);
+  color:var(--gold);
   font-size:2rem;
   cursor:pointer;
-  padding:6px 10px;
-  font-weight:700;
-  transition:transform .15s, color .2s;
+  transition:.2s;
 }
-.calendar-header button:hover{
-  transform:scale(1.25);
-  color:var(--gold);
-}
-.calendar-header h2{
-  margin:0;
-  font-size:2rem;
-  color:var(--gold-light);
-  font-weight:600;
-}
+.calendar-header button:hover{transform:scale(1.2);color:var(--accent);}
 
-/* DIAS */
+/* GRID */
 .weekdays,.days{
   display:grid;
   grid-template-columns:repeat(7,1fr);
@@ -111,63 +85,49 @@ header h1{
   text-align:center;
 }
 .weekdays div{
-  font-size:1rem;
   color:var(--muted);
-  padding:8px 0;
+  font-weight:600;
   text-transform:uppercase;
   letter-spacing:.8px;
 }
 .day{
-  background:var(--bg);
-  border:1px solid var(--line);
-  border-radius:14px;
-  padding:16px 8px;
-  min-height:110px;
-  font-size:1.05rem;
-  cursor:pointer;
+  background:var(--card);
+  border:1px solid rgba(255,255,255,0.05);
+  border-radius:var(--radius);
+  min-height:100px;
   display:flex;
   flex-direction:column;
-  justify-content:flex-start;
   align-items:center;
-  transition:all .25s ease;
-  position:relative;
-  overflow:hidden;
-  animation:fadeInUp .4s ease;
+  justify-content:flex-start;
+  padding:10px;
+  transition:all .25s;
+  cursor:pointer;
 }
 .day:hover{
-  border-color:var(--gold-light);
-  box-shadow:0 0 20px rgba(212,175,55,.35);
-  transform:translateY(-2px);
-}
-.day.disabled{
-  opacity:.15;
-  pointer-events:none;
+  transform:translateY(-3px);
+  box-shadow:0 0 20px rgba(212,175,55,0.25);
+  border-color:var(--gold);
 }
 .day .num{
   font-weight:700;
-  font-size:1.3rem;
-  margin-bottom:6px;
+  font-size:1.2rem;
+  margin-bottom:4px;
 }
 .badge{
-  font-size:.85rem;
+  font-size:.8rem;
   border-radius:10px;
-  padding:3px 8px;
+  padding:3px 7px;
   margin-top:4px;
 }
-.badge.pend{
-  background:rgba(239,68,68,.15);
-  color:var(--red);
-}
-.badge.conf{
-  background:rgba(34,197,94,.15);
-  color:var(--green);
-}
+.badge.pend{background:rgba(239,68,68,.15);color:var(--red);}
+.badge.conf{background:rgba(34,197,94,.15);color:var(--green);}
+.day.disabled{opacity:.2;pointer-events:none;}
 
 /* MODAL */
 #modal{
   position:fixed;
   inset:0;
-  background:rgba(0,0,0,.75);
+  background:rgba(0,0,0,.8);
   display:none;
   align-items:center;
   justify-content:center;
@@ -176,78 +136,63 @@ header h1{
 #modal.show{display:flex;}
 .modal-content{
   background:var(--card);
+  border:1px solid var(--gold);
   border-radius:var(--radius);
   padding:25px;
   width:90%;
   max-width:500px;
-  box-shadow:0 15px 45px rgba(0,0,0,.7);
-  border:1px solid var(--line);
-  animation:fadeInUp .3s ease;
   max-height:80vh;
   overflow-y:auto;
+  box-shadow:0 0 40px rgba(0,0,0,.8);
+  animation:fadeInUp .3s ease;
 }
 .modal-content h3{
   text-align:center;
-  color:var(--gold-light);
-  font-size:1.4rem;
-  margin-top:0;
+  color:var(--gold);
+  font-family:'Playfair Display',serif;
   margin-bottom:15px;
-  text-shadow:0 0 10px rgba(212,175,55,.3);
 }
 .reserva-item{
-  border:1px solid var(--line);
+  background:var(--bg);
+  border:1px solid var(--gold);
   border-radius:12px;
   padding:12px;
   margin-bottom:12px;
-  background:var(--bg);
-  font-size:1rem;
-  line-height:1.4;
-  transition:.2s ease;
 }
-.reserva-item:hover{border-color:var(--gold);}
 .reserva-item strong{color:var(--gold);}
 .btn-whats{
   display:inline-block;
-  margin-top:10px;
   background:linear-gradient(90deg,#25D366,#128C7E);
   color:#fff;
   text-decoration:none;
-  padding:8px 12px;
+  padding:8px 14px;
   border-radius:8px;
-  font-size:.9rem;
   font-weight:600;
-  transition:.2s;
+  margin-top:8px;
 }
-.btn-whats:hover{filter:brightness(1.1);}
 .close-btn{
+  display:block;
+  margin:15px auto 0;
   background:none;
   border:none;
   color:var(--muted);
   cursor:pointer;
-  display:block;
-  margin:14px auto 0;
-  font-size:1rem;
 }
-
-/* MOBILE */
-@media(max-width:900px){
-  header img{width:80px;}
-  header h1{font-size:1.3rem;}
-  .calendar{padding:15px;height:calc(100vh - 120px);}
-  .calendar-header h2{font-size:1.5rem;}
-  .day{min-height:85px;font-size:.9rem;}
-  .badge{font-size:.75rem;}
-}
-
 @keyframes fadeIn{from{opacity:0}to{opacity:1}}
-@keyframes fadeInUp{from{opacity:0;transform:translateY(20px);}to{opacity:1;transform:translateY(0);}}
+@keyframes fadeInUp{from{opacity:0;transform:translateY(25px);}to{opacity:1;transform:translateY(0);}}
+
+@media(max-width:800px){
+  .calendar{padding:10px 15px;}
+  .day{min-height:80px;}
+  header h1{font-size:1.5rem;}
+}
 </style>
 </head>
 
 <body>
 <header>
-  <img src="https://github.com/grupodvbr/cardapiomercatto/blob/main/icons/logo.png?raw=true" alt="Mercatto Delícia">
-  <h1>Calendário de Reservas</h1>
+  <h1>Delícia Gourmet</h1>
+  <p>Calendário de Reservas</p>
 </header>
 
 <div class="calendar">
@@ -271,7 +216,7 @@ header h1{
 </div>
 
 <script>
-const GAS_ENDPOINT = "https://script.google.com/macros/s/AKfycbzefjlgLvZ8dCSdAUbcPC9PBpWMAZWvCDxs7jpQzm6WfiKLriWryDVMlIYIwK6NLLJgoA/exec";
+const GAS_ENDPOINT = "https://script.google.com/macros/s/AKfycbzefjlgLvZ8dCSdAUbcPC9PBpWMAZWvCDxs7jpQzm6WfiKLriWryDVMlIYIwK6NLLJgoA/exec"; // <-- substitua
 const daysContainer = document.getElementById("days");
 const monthYear = document.getElementById("monthYear");
 const modal = document.getElementById("modal");
@@ -287,39 +232,36 @@ async function carregarReservas(){
     const res = await fetch(GAS_ENDPOINT + "?acao=listarReservas");
     reservas = await res.json();
     renderCalendar();
-  }catch(err){
-    console.error("Erro ao carregar reservas",err);
-  }
+  }catch(err){console.error("Erro ao carregar reservas",err);}
 }
 
 function renderCalendar(){
-  const year = currentDate.getFullYear();
-  const month = currentDate.getMonth();
-  const firstDay = new Date(year,month,1);
-  const lastDay = new Date(year,month+1,0);
+  const year=currentDate.getFullYear();
+  const month=currentDate.getMonth();
+  const firstDay=new Date(year,month,1);
+  const lastDay=new Date(year,month+1,0);
+  const monthNames=["Janeiro","Fevereiro","Março","Abril","Maio","Junho","Julho","Agosto","Setembro","Outubro","Novembro","Dezembro"];
+  monthYear.textContent=`${monthNames[month]} ${year}`;
+  daysContainer.innerHTML="";
 
-  const monthNames = ["Janeiro","Fevereiro","Março","Abril","Maio","Junho","Julho","Agosto","Setembro","Outubro","Novembro","Dezembro"];
-  monthYear.textContent = `${monthNames[month]} ${year}`;
-  daysContainer.innerHTML = "";
-
-  const startDay = firstDay.getDay();
+  const startDay=firstDay.getDay();
   for(let i=0;i<startDay;i++){
     const empty=document.createElement("div");
     empty.classList.add("day","disabled");
     daysContainer.appendChild(empty);
   }
 
-  for(let d=1; d<=lastDay.getDate(); d++){
-    const dateStr = `${year}-${String(month+1).padStart(2,"0")}-${String(d).padStart(2,"0")}`;
+  for(let d=1;d<=lastDay.getDate();d++){
+    const dateStr=`${year}-${String(month+1).padStart(2,"0")}-${String(d).padStart(2,"0")}`;
     const dayEl=document.createElement("div");
     dayEl.classList.add("day");
     dayEl.innerHTML=`<div class="num">${d}</div>`;
-    const reservasDia = reservas.filter(r=>r.data===dateStr);
+    const reservasDia=reservas.filter(r=>r.data===dateStr);
     if(reservasDia.length>0){
-      const pend = reservasDia.filter(r=>r.status==="Pendente").length;
-      const conf = reservasDia.filter(r=>r.status==="Confirmada").length;
-      if(pend>0) dayEl.innerHTML+=`<div class="badge pend">Pend: ${pend}</div>`;
-      if(conf>0) dayEl.innerHTML+=`<div class="badge conf">Conf: ${conf}</div>`;
+      const pend=reservasDia.filter(r=>r.status==="Pendente").length;
+      const conf=reservasDia.filter(r=>r.status==="Confirmada").length;
+      if(pend>0)dayEl.innerHTML+=`<div class="badge pend">Pend: ${pend}</div>`;
+      if(conf>0)dayEl.innerHTML+=`<div class="badge conf">Conf: ${conf}</div>`;
       dayEl.addEventListener("click",()=>abrirModal(dateStr,reservasDia));
     }
     daysContainer.appendChild(dayEl);
@@ -327,29 +269,26 @@ function renderCalendar(){
 }
 
 function abrirModal(data,reservasDia){
-  modalDate.textContent = new Date(data).toLocaleDateString("pt-BR",{weekday:'long',day:'2-digit',month:'long',year:'numeric'});
+  modalDate.textContent=new Date(data).toLocaleDateString("pt-BR",{weekday:'long',day:'2-digit',month:'long',year:'numeric'});
   reservasList.innerHTML="";
   reservasDia.forEach(r=>{
-    const tel = r.contato?.replace(/\D/g,"");
+    const tel=r.contato?.replace(/\D/g,"");
     reservasList.innerHTML+=`
       <div class="reserva-item">
         <strong>${r.nome}</strong><br>
-        ${r.horario ? "🕒 "+r.horario+"<br>" : ""}
-        ${r.ocasiao ? "🎈 "+r.ocasiao+"<br>" : ""}
-        ${r.pessoas ? "👥 "+r.pessoas+" pessoas<br>" : ""}
-        ${r.mesa ? "🍽️ Mesa: "+r.mesa+"<br>" : ""}
+        ${r.horario?"🕒 "+r.horario+"<br>":""}
+        ${r.ocasiao?"🎉 "+r.ocasiao+"<br>":""}
+        ${r.pessoas?"👥 "+r.pessoas+" pessoas<br>":""}
+        ${r.mesa?"🍽️ Mesa: "+r.mesa+"<br>":""}
         <span>Status: <b style="color:${r.status==='Pendente'?'#ef4444':'#22c55e'}">${r.status}</b></span><br>
-        <a class="btn-whats" href="https://wa.me/55${tel}?text=Olá%20${encodeURIComponent(r.nome)}!%20Aqui%20é%20do%20Mercatto%20Delícia.%20Confirmando%20sua%20reserva%20para%20${r.data}%20às%20${r.horario||''}." target="_blank">💬 WhatsApp</a>
-      </div>
-    `;
+        <a class="btn-whats" href="https://wa.me/55${tel}?text=Olá%20${encodeURIComponent(r.nome)}!%20Aqui%20é%20da%20Delícia%20Gourmet.%20Confirmando%20sua%20reserva%20para%20${r.data}%20às%20${r.horario||''}." target="_blank">💬 WhatsApp</a>
+      </div>`;
   });
   modal.classList.add("show");
 }
-
 closeModal.addEventListener("click",()=>modal.classList.remove("show"));
 document.getElementById("prevMonth").onclick=()=>{currentDate.setMonth(currentDate.getMonth()-1);renderCalendar();}
 document.getElementById("nextMonth").onclick=()=>{currentDate.setMonth(currentDate.getMonth()+1);renderCalendar();}
-
 carregarReservas();
 </script>
 </body>
