--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
 <title>Delícia Gourmet – Calendário de Reservas</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Inter:wght@400;600&display=swap" rel="stylesheet">
+
 <style>
-:root{
+:root {
   --bg:#0b0f19;--card:#151b28;--gold:#d4af37;--accent:#b8860b;
   --text:#f8fafc;--muted:#a5b1c2;--red:#ef4444;--green:#22c55e;
   --radius:18px;
 }
 *{margin:0;padding:0;box-sizing:border-box}
 html,body{
-  width:100%;
   height:100%;
   background:var(--bg);
   font-family:'Inter',sans-serif;
@@ -22,9 +22,11 @@ html,body{
   flex-direction:column;
   overflow:hidden;
 }
+
+/* HEADER */
 header{
   text-align:center;
-  padding:25px 10px 15px;
+  padding:20px 0 10px;
   background:linear-gradient(180deg,rgba(212,175,55,.12),transparent);
   box-shadow:0 3px 15px rgba(0,0,0,.4);
   flex-shrink:0;
@@ -35,16 +37,19 @@ header h1{
   color:var(--gold);
   text-shadow:0 0 12px rgba(212,175,55,.4);
 }
-header p{font-size:1rem;color:var(--muted)}
+header p{
+  font-size:1rem;
+  color:var(--muted);
+}
 
 /* CALENDÁRIO */
 .calendar{
   flex:1;
   display:flex;
   flex-direction:column;
-  padding:25px 40px;
-  overflow-y:auto;
+  padding:20px 40px;
   height:calc(100vh - 110px);
+  overflow-y:auto;
 }
 .calendar-header{
   display:flex;
@@ -61,7 +66,7 @@ header p{font-size:1rem;color:var(--muted)}
   background:none;
   border:none;
   color:var(--gold);
-  font-size:2.2rem;
+  font-size:2rem;
   cursor:pointer;
   transition:.2s;
 }
@@ -81,13 +86,12 @@ header p{font-size:1rem;color:var(--muted)}
   color:var(--muted);
   font-weight:600;
   text-transform:uppercase;
-  letter-spacing:.5px;
 }
 .day{
   background:var(--card);
   border:1px solid rgba(255,255,255,.05);
   border-radius:var(--radius);
-  min-height:150px; /* ← AUMENTEI o tamanho dos cards */
+  min-height:150px;
   display:flex;
   flex-direction:column;
   align-items:center;
@@ -172,12 +176,42 @@ header p{font-size:1rem;color:var(--muted)}
   cursor:pointer;
 }
 
-/* MOBILE */
+/* OVERLAY DE CARREGAMENTO */
+#overlay{
+  position:fixed;
+  inset:0;
+  background:rgba(11,15,25,.95);
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  justify-content:center;
+  color:var(--gold);
+  font-family:'Playfair Display',serif;
+  font-size:1.4rem;
+  z-index:999;
+}
+.loader{
+  border:5px solid rgba(255,255,255,.1);
+  border-top:5px solid var(--gold);
+  border-radius:50%;
+  width:60px;
+  height:60px;
+  animation:spin 1s linear infinite;
+  margin-bottom:20px;
+}
+@keyframes spin{to{transform:rotate(360deg)}}
+#errorMsg{
+  text-align:center;
+  color:var(--red);
+  font-size:1rem;
+  margin-top:20px;
+}
+
+/* RESPONSIVO */
 @media(max-width:900px){
-  header h1{font-size:1.6rem}
-  .calendar{padding:15px;height:calc(100vh - 100px);}
-  .day{min-height:100px;font-size:1rem;}
-  .calendar-header h2{font-size:1.4rem}
+  .calendar{padding:15px;}
+  .day{min-height:120px;}
+  header h1{font-size:1.6rem;}
 }
 </style>
 </head>
@@ -191,7 +225,7 @@ header p{font-size:1rem;color:var(--muted)}
 <div class="calendar">
   <div class="calendar-header">
     <button id="prevMonth">◀</button>
-    <h2 id="monthYear">Outubro 2025</h2>
+    <h2 id="monthYear">Carregando...</h2>
     <button id="nextMonth">▶</button>
   </div>
   <div class="weekdays">
@@ -200,7 +234,11 @@ header p{font-size:1rem;color:var(--muted)}
   <div class="days" id="days"></div>
 </div>
 
-<!-- MODAL -->
+<div id="overlay">
+  <div class="loader"></div>
+  <div>Carregando reservas...</div>
+</div>
+
 <div id="modal">
   <div class="modal-content">
     <h3 id="modalDate">Reservas do dia</h3>
@@ -217,43 +255,62 @@ const modal=document.getElementById("modal");
 const reservasList=document.getElementById("reservasList");
 const modalDate=document.getElementById("modalDate");
 const closeModal=document.getElementById("closeModal");
+const overlay=document.getElementById("overlay");
 let reservas=[],currentDate=new Date();
 
+/* 🔹 Carrega todas as reservas (todos os meses) */
 async function carregarReservas(){
+  overlay.style.display="flex";
   try{
     const res=await fetch(GAS_ENDPOINT+"?acao=listarReservas");
-    reservas=await res.json();renderCalendar();
-  }catch(e){console.error(e);}
+    reservas=await res.json();
+    if(!Array.isArray(reservas)||reservas.length===0){
+      throw new Error("Nenhuma reserva encontrada.");
+    }
+    overlay.style.display="none";
+    renderCalendar();
+  }catch(e){
+    overlay.innerHTML=`<div class="loader" style="border-top-color:#ef4444"></div>
+    <div id="errorMsg">❌ Erro ao carregar reservas.<br>${e.message}</div>`;
+    console.error(e);
+  }
 }
 
+/* 🔹 Renderiza o mês atual */
 function renderCalendar(){
-  const y=currentDate.getFullYear(),m=currentDate.getMonth();
+  const y=currentDate.getFullYear();
+  const m=currentDate.getMonth();
   const first=new Date(y,m,1),last=new Date(y,m+1,0);
   const names=["Janeiro","Fevereiro","Março","Abril","Maio","Junho","Julho","Agosto","Setembro","Outubro","Novembro","Dezembro"];
-  monthYear.textContent=`${names[m]} ${y}`;daysContainer.innerHTML="";
+  monthYear.textContent=`${names[m]} ${y}`;
+  daysContainer.innerHTML="";
+
   const start=first.getDay();
   for(let i=0;i<start;i++){
-    const e=document.createElement("div");
-    e.classList.add("day","disabled");
-    daysContainer.appendChild(e);
+    const empty=document.createElement("div");
+    empty.classList.add("day","disabled");
+    daysContainer.appendChild(empty);
   }
+
   for(let d=1;d<=last.getDate();d++){
     const date=`${y}-${String(m+1).padStart(2,"0")}-${String(d).padStart(2,"0")}`;
     const el=document.createElement("div");
     el.classList.add("day");
     el.innerHTML=`<div class="num">${d}</div>`;
+
     const list=reservas.filter(r=>r.data===date);
     if(list.length>0){
       const p=list.filter(r=>r.status==="Pendente").length;
       const c=list.filter(r=>r.status==="Confirmada").length;
-      if(p>0) el.innerHTML+=`<div class="badge pend">Pend:${p}</div>`;
-      if(c>0) el.innerHTML+=`<div class="badge conf">Conf:${c}</div>`;
+      if(p>0)el.innerHTML+=`<div class="badge pend">Pend:${p}</div>`;
+      if(c>0)el.innerHTML+=`<div class="badge conf">Conf:${c}</div>`;
       el.onclick=()=>abrirModal(date,list);
     }
     daysContainer.appendChild(el);
   }
 }
 
+/* 🔹 Modal */
 function abrirModal(data,list){
   modalDate.textContent=new Date(data).toLocaleDateString("pt-BR",{weekday:"long",day:"2-digit",month:"long",year:"numeric"});
   reservasList.innerHTML="";
@@ -267,15 +324,22 @@ function abrirModal(data,list){
         ${r.pessoas?"👥 "+r.pessoas+" pessoas<br>":""}
         ${r.mesa?"🍽️ Mesa: "+r.mesa+"<br>":""}
         <span>Status: <b style="color:${r.status==='Pendente'?'#ef4444':'#22c55e'}">${r.status}</b></span><br>
-        <a class="btn-whats" href="https://wa.me/55${tel}?text=Olá ${encodeURIComponent(r.nome)}! Aqui é da Delícia Gourmet. Confirmando sua reserva para ${r.data} às ${r.horario||''}." target="_blank">💬 WhatsApp</a>
+        <a class="btn-whats" href="https://wa.me/55${tel}?text=Olá ${encodeURIComponent(r.nome)}! Aqui é da Delícia Gourmet. Confirmando sua reserva para ${r.data}%20às%20${r.horario||''}." target="_blank">💬 WhatsApp</a>
       </div>`;
   });
   modal.classList.add("show");
 }
 closeModal.onclick=()=>modal.classList.remove("show");
+
+/* 🔹 Navegação */
 document.getElementById("prevMonth").onclick=()=>{currentDate.setMonth(currentDate.getMonth()-1);renderCalendar();}
 document.getElementById("nextMonth").onclick=()=>{currentDate.setMonth(currentDate.getMonth()+1);renderCalendar();}
-carregarReservas();
+
+/* 🔹 Inicialização */
+window.onload=()=>{
+  renderCalendar();
+  carregarReservas();
+};
 </script>
 </body>
 </html>
