--- a/index.html
+++ b/index.html
@@ -125,38 +125,50 @@ header p{
 #modal{
   position:fixed;
   inset:0;
-  background:rgba(0,0,0,.8);
+  background:rgba(0,0,0,.75);
   display:none;
   align-items:center;
   justify-content:center;
   z-index:99;
+  padding:20px;
 }
 #modal.show{display:flex}
 .modal-content{
   background:var(--card);
   border:1px solid var(--gold);
   border-radius:var(--radius);
-  padding:25px;
-  width:90%;
-  max-width:500px;
-  max-height:80vh;
+  padding:25px 35px;
+  width:85%;
+  max-width:900px;
+  max-height:85vh;
   overflow-y:auto;
-  box-shadow:0 0 40px rgba(0,0,0,.8);
+  box-shadow:0 0 60px rgba(212,175,55,.25);
+  animation:fadeIn .3s ease;
 }
+@keyframes fadeIn{from{opacity:0;transform:scale(.95)}to{opacity:1;transform:scale(1)}}
 .modal-content h3{
   text-align:center;
   color:var(--gold);
   font-family:'Playfair Display',serif;
-  margin-bottom:15px;
+  font-size:1.4rem;
+  margin-bottom:20px;
+  border-bottom:1px solid rgba(255,255,255,.1);
+  padding-bottom:8px;
 }
 .reserva-item{
   background:var(--bg);
-  border:1px solid var(--gold);
+  border:1px solid rgba(212,175,55,.3);
   border-radius:12px;
-  padding:12px;
-  margin-bottom:12px;
+  padding:16px;
+  margin-bottom:14px;
+  transition:all .2s;
 }
-.reserva-item strong{color:var(--gold)}
+.reserva-item:hover{
+  border-color:var(--gold);
+  box-shadow:0 0 15px rgba(212,175,55,.15);
+}
+.reserva-item strong{color:var(--gold);font-size:1.1rem;}
+.reserva-item span{display:block;margin-top:6px;font-size:.95rem;color:var(--muted);}
 .btn-whats{
   display:inline-block;
   background:linear-gradient(90deg,#25D366,#128C7E);
@@ -165,15 +177,24 @@ header p{
   padding:8px 14px;
   border-radius:8px;
   font-weight:600;
-  margin-top:8px;
+  margin-top:10px;
+  transition:all .2s;
 }
+.btn-whats:hover{opacity:.9;transform:scale(1.03);}
 .close-btn{
   display:block;
-  margin:15px auto 0;
+  margin:18px auto 0;
   background:none;
-  border:none;
+  border:1px solid var(--muted);
   color:var(--muted);
+  border-radius:10px;
+  padding:8px 18px;
   cursor:pointer;
+  transition:.3s;
+}
+.close-btn:hover{
+  color:var(--gold);
+  border-color:var(--gold);
 }
 
 /* OVERLAY DE CARREGAMENTO */
@@ -200,17 +221,13 @@ header p{
   margin-bottom:20px;
 }
 @keyframes spin{to{transform:rotate(360deg)}}
-#errorMsg{
-  text-align:center;
-  color:var(--red);
-  font-size:1rem;
-  margin-top:20px;
-}
+#errorMsg{text-align:center;color:var(--red);font-size:1rem;margin-top:20px;}
 
 /* RESPONSIVO */
 @media(max-width:900px){
   .calendar{padding:15px;}
   .day{min-height:120px;}
+  .modal-content{width:95%;max-height:90vh;padding:20px;}
   header h1{font-size:1.6rem;}
 }
 </style>
@@ -310,7 +327,7 @@ function renderCalendar(){
   }
 }
 
-/* 🔹 Modal */
+/* 🔹 Modal grande */
 function abrirModal(data,list){
   modalDate.textContent=new Date(data).toLocaleDateString("pt-BR",{weekday:"long",day:"2-digit",month:"long",year:"numeric"});
   reservasList.innerHTML="";
@@ -318,12 +335,12 @@ function abrirModal(data,list){
     const tel=r.contato?.replace(/\D/g,"");
     reservasList.innerHTML+=`
       <div class="reserva-item">
-        <strong>${r.nome}</strong><br>
-        ${r.horario?"🕒 "+r.horario+"<br>":""}
-        ${r.ocasiao?"🎉 "+r.ocasiao+"<br>":""}
-        ${r.pessoas?"👥 "+r.pessoas+" pessoas<br>":""}
-        ${r.mesa?"🍽️ Mesa: "+r.mesa+"<br>":""}
-        <span>Status: <b style="color:${r.status==='Pendente'?'#ef4444':'#22c55e'}">${r.status}</b></span><br>
+        <strong>${r.nome}</strong>
+        ${r.horario?`<span>🕒 Horário: ${r.horario}</span>`:""}
+        ${r.ocasiao?`<span>🎉 Ocasião: ${r.ocasiao}</span>`:""}
+        ${r.pessoas?`<span>👥 Pessoas: ${r.pessoas}</span>`:""}
+        ${r.mesa?`<span>🍽️ Mesa: ${r.mesa}</span>`:""}
+        <span>Status: <b style="color:${r.status==='Pendente'?'#ef4444':'#22c55e'}">${r.status}</b></span>
         <a class="btn-whats" href="https://wa.me/55${tel}?text=Olá ${encodeURIComponent(r.nome)}! Aqui é da Delícia Gourmet. Confirmando sua reserva para ${r.data}%20às%20${r.horario||''}." target="_blank">💬 WhatsApp</a>
       </div>`;
   });
@@ -336,10 +353,7 @@ document.getElementById("prevMonth").onclick=()=>{currentDate.setMonth(currentDa
 document.getElementById("nextMonth").onclick=()=>{currentDate.setMonth(currentDate.getMonth()+1);renderCalendar();}
 
 /* 🔹 Inicialização */
-window.onload=()=>{
-  renderCalendar();
-  carregarReservas();
-};
+window.onload=()=>{renderCalendar();carregarReservas();};
 </script>
 </body>
 </html>
