--- a/index.html
+++ b/index.html
@@ -51,7 +51,6 @@ header p{
   padding:20px 40px;
   height:calc(100vh - 110px);
   overflow-y:auto;
-  scroll-behavior:smooth;
 }
 .calendar-header{
   display:flex;
@@ -72,7 +71,6 @@ header p{
   font-size:2rem;
   cursor:pointer;
   transition:.2s;
-  padding:4px 10px;
 }
 .calendar-header button:hover{
   transform:scale(1.25);
@@ -96,22 +94,16 @@ header p{
   background:var(--card);
   border:1px solid rgba(255,255,255,.05);
   border-radius:var(--radius);
-  min-height:120px;
+  min-height:130px;
   display:flex;
   flex-direction:column;
   align-items:center;
-  justify-content:center;
+  justify-content:flex-start;
   padding:10px;
   transition:all .25s;
   cursor:pointer;
-  font-size:1.1rem;
   position:relative;
   user-select:none;
-}
-.day:hover{
-  transform:translateY(-3px);
-  box-shadow:0 0 25px rgba(212,175,55,.25);
-  border-color:var(--gold);
 }
 .day .num{
   font-weight:700;
@@ -121,13 +113,27 @@ header p{
 .day.reservado{
   background:#fff;
   color:#000;
-  animation:pulse 1.5s infinite;
+  animation:pulse 1.8s infinite;
   font-weight:600;
+}
+.day.reservado .nomes{
+  margin-top:4px;
+  font-size:.8rem;
+  line-height:1.1rem;
+  color:#000;
+  font-weight:500;
+  text-align:center;
+  word-break:break-word;
 }
 @keyframes pulse{
   0%{box-shadow:0 0 0 rgba(255,255,255,.3);}
-  50%{box-shadow:0 0 25px rgba(255,255,255,.8);}
+  50%{box-shadow:0 0 20px rgba(255,255,255,.7);}
   100%{box-shadow:0 0 0 rgba(255,255,255,.3);}
+}
+.day:hover{
+  transform:translateY(-3px);
+  box-shadow:0 0 25px rgba(212,175,55,.25);
+  border-color:var(--gold);
 }
 .day.disabled{opacity:.2;pointer-events:none}
 
@@ -174,6 +180,12 @@ header p{
 }
 .reserva-item strong{color:var(--gold);font-size:1.1rem;}
 .reserva-item span{display:block;margin-top:6px;font-size:.95rem;color:var(--muted);}
+.reserva-item .criado{
+  color:var(--gold);
+  font-size:.85rem;
+  margin-top:6px;
+  font-style:italic;
+}
 .btn-whats{
   display:inline-block;
   background:linear-gradient(90deg,#25D366,#128C7E);
@@ -232,7 +244,7 @@ header p{
 @media(max-width:900px){
   header h1{font-size:1.6rem;}
   .calendar{padding:10px 15px;}
-  .day{min-height:80px;font-size:1rem;border-radius:14px;}
+  .day{min-height:90px;font-size:1rem;border-radius:14px;}
   .day .num{font-size:1.2rem;}
   .weekdays div{font-size:.75rem;}
   .modal-content{width:95%;padding:20px;max-height:90vh;}
@@ -322,6 +334,9 @@ function renderCalendar(){
     const list=reservas.filter(r=>r.data===date);
     if(list.length>0){
       el.classList.add("reservado");
+      const nomes=list.map(r=>r.nome.split(" ")[0]).slice(0,3).join(", ");
+      const extra=list.length>3?"...":"";
+      el.innerHTML+=`<div class="nomes">${nomes}${extra}</div>`;
       el.onclick=()=>abrirModal(date,list);
     }
     daysContainer.appendChild(el);
@@ -335,6 +350,7 @@ function abrirModal(data,list){
   reservasList.innerHTML="";
   list.forEach(r=>{
     const tel=r.contato?.replace(/\D/g,"");
+    const criacao=r.criadoEm?formatarDataHora(r.criadoEm):null;
     reservasList.innerHTML+=`
       <div class='reserva-item'>
         <strong>${r.nome}</strong>
@@ -342,12 +358,22 @@ function abrirModal(data,list){
         ${r.pessoas?`<span>👥 ${r.pessoas} pessoa(s)</span>`:""}
         ${r.mesa?`<span>🍽️ Mesa: ${r.mesa}</span>`:""}
         ${r.status?`<span>Status: <b style="color:${r.status==="Pendente"?"#ef4444":"#22c55e"}">${r.status}</b></span>`:""}
+        ${criacao?`<div class="criado">🕓 Criado em ${criacao}</div>`:""}
         ${tel?`<a class='btn-whats' href='https://wa.me/55${tel}?text=Olá%20${encodeURIComponent(r.nome)}!%20Aqui%20é%20da%20Delícia%20Gourmet.%20Confirmando%20sua%20reserva%20para%20${encodeURIComponent(r.data)}%20às%20${encodeURIComponent(r.horario||"")}' target='_blank'>💬 WhatsApp</a>`:""}
       </div>`;
   });
   modal.classList.add("show");
 }
 closeModal.onclick=()=>modal.classList.remove("show");
+
+/* Formata data/hora da criação */
+function formatarDataHora(valor){
+  const dt=new Date(valor);
+  if(isNaN(dt))return "";
+  const dia=dt.toLocaleDateString("pt-BR",{day:"2-digit",month:"long",year:"numeric"});
+  const hora=dt.toLocaleTimeString("pt-BR",{hour:"2-digit",minute:"2-digit"});
+  return `${dia} às ${hora}`;
+}
 
 /* Navegação */
 document.getElementById("prevMonth").onclick=()=>{currentDate.setMonth(currentDate.getMonth()-1);renderCalendar();};
