--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ header p{
 .reserva-item .criado{
   color:var(--gold);
   font-size:.85rem;
-  margin-top:6px;
+  margin-top:8px;
   font-style:italic;
 }
 .btn-whats{
@@ -351,10 +351,11 @@ function abrirModal(data,list){
   list.forEach(r=>{
     const tel=r.contato?.replace(/\D/g,"");
     const criacao=r.criadoEm?formatarDataHora(r.criadoEm):null;
+    const horario=formatarHorario(r.horario);
     reservasList.innerHTML+=`
       <div class='reserva-item'>
         <strong>${r.nome}</strong>
-        ${r.horario?`<span>🕒 Horário: ${r.horario}</span>`:""}
+        ${horario?`<span>🕒 Horário: ${horario}</span>`:""}
         ${r.pessoas?`<span>👥 ${r.pessoas} pessoa(s)</span>`:""}
         ${r.mesa?`<span>🍽️ Mesa: ${r.mesa}</span>`:""}
         ${r.status?`<span>Status: <b style="color:${r.status==="Pendente"?"#ef4444":"#22c55e"}">${r.status}</b></span>`:""}
@@ -365,6 +366,16 @@ function abrirModal(data,list){
   modal.classList.add("show");
 }
 closeModal.onclick=()=>modal.classList.remove("show");
+
+/* Formata apenas hora (HH:MM) */
+function formatarHorario(h){
+  if(!h) return "";
+  try{
+    const d=new Date(h);
+    if(!isNaN(d)) return d.toLocaleTimeString("pt-BR",{hour:"2-digit",minute:"2-digit"});
+  }catch(e){}
+  return h.replace(/(\d{1,2}):?(\d{2})?.*/,"$1:$2");
+}
 
 /* Formata data/hora da criação */
 function formatarDataHora(valor){
